<resources>
    <string name="app_name">Data Store</string>
    <string name="text_title_register">Registre-se</string>
    <string name="text_subtitle_register">Registre-se para fazer o login</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Senha</string>
    <string name="text_button_register">Registrar</string>
    <string name="text_title_login">Login</string>
    <string name="text_subtitle_login">Entre para continuar</string>
    <string name="text_hint_email_register">Email</string>
    <string name="text_hint_password_register">Senha</string>
    <string name="text_forgot_password">Esqueceu a senha?</string>
    <string name="text_button_login">Entrar</string>
    <string name="text_button_not_user">Não é usuário? Registre-se</string>
</resources>