<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/white"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textviewTitleRegisterUser"
        style="@style/Text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/text_title_register" />

    <TextView
        android:id="@+id/textviewSubtitleRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_subtitle_register" />

    <EditText
        android:id="@+id/editTextEmailRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_email_register"
        android:inputType="textAutoComplete"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextPasswordRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_hint_password_register"
        android:inputType="textAutoComplete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterUser"
        style="@style/Text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="180dp"
        android:background="@color/purple_700"
        android:text="@string/text_button_register" />
</androidx.appcompat.widget.LinearLayoutCompat>